--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "author": "Sergey Yakimov <s.yakimov87@yandex.ru>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
